Resize picture filet mignon + Fix pictures overflow plats favoris

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -126,6 +126,7 @@ main div{
 
 .plats-favoris img {
     display: block;
+    width: 100%;
 }
 
 .overlay {
